--- a/anitrac/anitrac/data/config.json
+++ b/anitrac/anitrac/data/config.json
@@ -1,6 +1,9 @@
 {
-    "server": "http://192.168.1.3:5000",
-    "milage_limit" : "100000",
-    "close_multiplier" : "0.8",
-    "uom" : ["Footage", "ft"]
+    "server": "http://192.168.1.2:5000",
+    "milage_limit": "100000",
+    "close_multiplier": "0.8",
+    "uom": [
+        "Footage",
+        "ft"
+    ]
 }
